--- a/_posts/2014-10-21-Justice.md
+++ b/_posts/2014-10-21-Justice.md
@@ -5,7 +5,7 @@ date: 2014-10-21
 ---
 <div class="post">
 
-  <header class="post-header"> AyCrazy Sunday Funday
+  <header class="post-header"> 
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
@@ -14,7 +14,7 @@ date: 2014-10-21
     {{ content }} <i>Sometimes a theme(s) naturally emerge from your everyday experiences. </i>
     <h1> Justice </h1>
     <p> Last night I attended a truly amazing event.  The reason for the event was not truly novel, the setting not grand, the topic not in vogue, and the participants not infamous.  The event was amazing because of who and what showed up in the room.  The New Orleans Independent Police Monitor held a community forum titled "Blow The Whistle: Residents and Officers Raise Voices to End NOPD Retaliation."  The venue was City Hall Chambers, or as Councilmember At-large Jason Williams called it "The home of the people."  Last night, it was the type of domicile for civic engagement and process that Mr. Williams was claiming it could be.  In addition to Mr. Williams, Councilmember Jared Brousset, Activist Sandra Hester, Police Chief Michael Harrison, Chief of the Police Investigation Bureau Arlinda Westbrook, Independent Police Monitor Susan Hutson, Deput Monitor Simone Levine, Director of Community Relations Ursula Price, Activist Yvette Thierry, Activist Robert Goodman, Director of the IPM's Community Police Mediation Program, Jasmine Groves the daughter of Kim Groves (a woman murdered as a result of police retaliation), retired New Orleans police officers, Federal Prosecutor Michael McMann, active and retired defense lawyers, and many others filled the City Council Chambers to half capacity.  The turnout was not what it needed to be, but it was a good start; and the dialogue that ensued, although it mostly took the form of people speaking their mind and taking a seat for the next person to do the same, was a good step forward for reconciliation between the New Orleans community and the New Orleans Policed Department.  The remarks were open, honest, and raised challenging and deep issues with the NOPD.  It marked a new chapter for community and police relations as it was the first time that a New Orleans police chief had been in the room, let alone with two councilmembers and the Mayor's press secretary, to hear harsh and honest thoughts about the oustide and inside world's view of his organization.  The dialogue indicated peoples' comfort with the forum, and progress, for what its worth, was assured whether that be in funding the community police mediation program or making recommendations to NOPD or PIB protocal a reality.  This was a case where the most basic form of justice was playing out- when a community can hold its members and public servants accountable to the task for which they have been given the privelege to assume responsibility.  No lawsuits, no fistacuffs, just thoughts and deliberation.  It was a fun night to reflect  on for the previously states purposes, but also because of the humor, absurdity, and bravery that I witnessed.</p>
-    <p> Justice does not exist on its own.  Logically, it shares a space with its negative form, injustice.  Nevermind the fact that I have been dealing with small injustices, as everyone does, in my own right both in and out of work, what struck me as truly unjust, and what made justice the theme of this most provocative set of experience, was the death of a young man who I had the privelege and honor of getting to know.  The legacy young man, it seems, will unforunately face the ignorance and endure the unjust scrutiny of people who seem to revel in reducing the tragic and compelex into the reasonable and simple, but with all due respect, fuck those people.  G, as I will call him now, did not come from the most priveleged background be he was surrounded and mentored by loving family members who engaged not just in subverting systemic injustice, but directly fighting it.  He and his siblings were and are part of a youth group that is inspirational in both their aspirations and their actions.  I have a special respect for the work that G and his siblings have and will do because while there are many positive outlets that those facing adversity can utilize in a manner that contributes to the community, few are as unforgiving and absurd as directly challenging and solving the existential and ever-present roots of community issues.  G did seem to be slightly (and I can really only say very slightly) more rambunctious and rebelious than the siblings I knew, but he had a zeal and authenticy about him that made me have to like him.  Make me want to know him and have mature conversations with him that may have been beyond his development.  I believe that I could sense that G had a good a precious soul, an honest perspective, and a bright future.  Unfortunately, close to two years after I got to meet him, his life was ended.  There is no possible reason for why this could be right, why this could make sense, how this could be just.  But you still have to ask why and how, its our condition.  This condition does lead us to answers, hopefully and ultimately it leads us to the root answers.  G strived to find those answers.  I strive to find those answers.  We may not get them, but being able to talk about what they may be, how we all may be a part of the root problem, is how we will make progress.  I have always been proud of my determination to particpate in such conversations and thoughts, but now I promise to never stop.  And as much as I can help the dialogue around other issues of which I am have less ability to be a part I will, that is another promise.  That is in honor of a friend Noah, who recently passed away while diagnosed with Leukemia.  He too lived too short a life, and had such a strong spirit.  This will only, and hopefully does, make life more complicated, but if we want to improve our society we must be up to the challenge. </p>
+    <p> Justice does not exist on its own.  Logically, it shares a space with its negative form, injustice.  Nevermind the fact that I have been dealing with small injustices, as everyone does, in my own right both in and out of work, what struck me as truly unjust, and what made justice the theme of this most provocative set of experience, was the death of a young man who I had the privelege and honor of getting to know.  The legacy of this young man, it seems, will unforunately face the ignorance and endure the unjust scrutiny of people who seem to revel in reducing the tragic and compelex into the reasonable and simple, but with all due respect, fuck those people.  G, as I will call him now, did not come from the most priveleged background be he was surrounded and mentored by loving family members who engaged not just in subverting systemic injustice, but directly fighting it.  He and his siblings were and are part of a youth group that is inspirational in both their aspirations and their actions.  I have a special respect for the work that G and his siblings have and will do because while there are many positive outlets that those facing adversity can utilize in a manner that contributes to the community, few are as unforgiving and absurd as directly challenging and solving the existential and ever-present roots of community issues.  G did seem to be slightly (and I can really only say very slightly) more rambunctious and rebelious than the siblings I knew, but he had a zeal and authenticy about him that made me have to like him.  Make me want to know him and have mature conversations with him that may have been beyond his development.  I believe that I could sense that G had a good a precious soul, an honest perspective, and a bright future.  Unfortunately, close to two years after I got to meet him, his life was ended.  There is no possible reason for why this could be right, why this could make sense, how this could be just.  But you still have to ask why and how, its our condition.  This condition does lead us to answers, hopefully and ultimately it leads us to the root answers.  G strived to find those answers.  I strive to find those answers.  We may not get them, but being able to talk about what they may be, how we all may be a part of the root problem, is how we will make progress.  I have always been proud of my determination to particpate in such conversations and thoughts, but now I promise to never stop.  And as much as I can help the dialogue around other issues of which I am have less ability to be a part I will, that is another promise.  That is in honor of a friend Noah, who recently passed away while diagnosed with Leukemia.  He too lived too short a life, and had such a strong spirit.  This will only, and hopefully does, make life more complicated, but if we want to improve our society we must be up to the challenge. </p>
   </article>
 
 </div>
