--- a/_posts/2014-10-21-Justice.md
+++ b/_posts/2014-10-21-Justice.md
@@ -6,6 +6,7 @@ date: 2014-10-21
 <div class="post">
 
   <header class="post-header"> 
+   <p class="post-meta"></p>
   </header>
 
   <article class="post-content">
